fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -139,11 +139,14 @@ main {
 main .content-wrapper {
     justify-content: center;
     align-content: center;
+    text-align: center;
 }
 
 main .project-grid {
     margin-top: 2em;
     display: grid;
+
+    place-content: start center;
 
     grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
     gap: 2em;
@@ -230,6 +233,7 @@ footer {
 
 footer .content-wrapper {
     align-items: center;
+    text-align: center;
     gap: 1em;
 }
 
